css/style.less
@import url("/excel-blinds/lib/responsive-menu/css/menu.less");
@import url("/excel-blinds/lib/page-reveal-theme/css/style.css");
@import url("/excel-blinds/lib/responsive-fader/css/style.css");

body {
	margin: 0;
	padding: 0;
	font-family: 'Lato', serif;
}

h1,h2,h3,h4,h5 {
	-webkit-text-stroke: 0.3px;
}

h1 {
	font-size: 58px;
}

h2 {
	font-size: 48px;
}

h3 {
	font-size: 38px;
}

h4 {
	font-size: 28px;
}

ul {
	list-style-type: none;
	padding: 0;
	margin: 0;
}

.spacer {
	height: 3px;
	width: 50px;
	display: inline-block;
	background-color: #fff;
}

/*Bootstrap Override */
.btn {
	padding: 0 25px;
	background-color: transparent;
	font-weight: 400;
	font-size: 12px;
	letter-spacing: 2px;
	line-height: 45px;
	color: #fff;
	text-transform: uppercase;
	border-radius: 0;
	border: 2px solid #fff;
}

.btn:hover {
	background-color: #fff;
	color: #000;

}

.btn:focus {
	outline: none;
	background-color: transparent;
	color: #fff;
}
/*End Override */

/*======================================================================= */
/*----------------------------------------------------------------------- */
/* Responsive Menu Override */
/*----------------------------------------------------------------------- */
/*======================================================================= */

/* Non-Responsive colors */
@nav-height: 70px;
@navbg: #222222;
@theme-background-color: #000000; /* default theme color of menu red/green/etc */
@font-color: #B0B0B0;			  /* font color of non-responsive view */
@hover-font-color: #fff; 		  /* hover font color of non-responsive view */

/* Responsive colors */
@theme-hover-color: #191919; 	  /* hover theme color */
@res-font-color: #B0B0B0;			  /* font color when you hover in responsive mode */
@res-list-border-top: #464646;	  /* color of border separating each link in responsive mode */
@list-item-height: 50px;
@res-btn-padding: 25px 20px;

nav {
	z-index: 3;
	opacity: 0.9;
}


/*======================================================================= */
/*----------------------------------------------------------------------- */
/* Home Page */
/*----------------------------------------------------------------------- */
/*======================================================================= */

/*======================================================================= */
/* Fader Overrides */
/*======================================================================= */

section#fader ul#slides li {
	opacity: 0.7;
	margin: 0 10px 0 10px;
	height: 420px;
	margin-top: 220px;
	padding: 0;
	text-align: center;
}

section#fader ul#slides li.slide-3 {
	background-color: #81abaa;
}

section#fader ul#slides li.slide-2 {
	background-color: #6e6f73;
}

section#fader ul#slides li.slide-1 {
	background-color: #16191e;
}

section#fader ul#background-images li.slide-1-bg {
	background-image: url(../img/bg1.jpg);
}

section#fader ul#background-images li.slide-2-bg {
	background-image: url(../img/bg2.jpg);
}


section#fader ul#background-images li.slide-3-bg {
	background-image: url(../img/bg3.jpg);
}

section#fader ul#slides li {
	padding-top: 70px; 
}

section#fader ul#slides li span.spacer{
	margin-bottom: 15px;
}

section#fader ul#slides li h3{
	font-weight: 700;
	letter-spacing: 6px;
	margin-bottom: 15px;
}

section#fader ul#slides li h1{
	font-size: 74px;
	font-weight: 900;
	letter-spacing: 4px;
	margin-bottom: 15px;
}

section#fader ul#slides li p {
	font-size: 16px;
	letter-spacing: 2px;
	margin: 0 250px 0 250px;
	padding: 0;
}

/*======================================================================= */
/* Page Reveal Theme Overrides */
/*======================================================================= */

/*------------------------- Page 2 -------------------------*/
section.process {
	min-height: 400px;
	background-color: #7ac143; 
	height: auto;
	color: #fff;
}
section.process {
  padding: 20px 10px 50px 10px;
}

section.process h1, section.process h2, section.process p {
  text-align: center; 
}

section.process img {
  display: block;
  margin: 30px auto 30px auto; 
}

section.process h1 {
  font-family: "Lato", sans-serif;
  font-size: 20px;
  line-height: 25px;
  font-weight: 400;
  color: white;
  text-align: center; 
}

section.process h2 {
  font-family: "Lato", sans-serif;
  font-size: 25px;
  line-height: 30px;
  font-weight: 700;
  color: white;
  text-align: center; 
}

section.process p {
  font-family: "Lato", sans-serif;
  font-size: 14px;
  line-height: 19px;
  font-weight: 300;
  color: white;
  text-align: center;
}

/*------------------------- Page 3 -------------------------*/
section.slider {
	background-image: none;
	background-color: #fff;
	min-height: 400px;
	height: auto;
}

/* Temporary Slider */

section.slider .row{
	margin-top: 50px;
}

section.slider img{
	width: 100%;
	margin-bottom: 50px;
}

/*------------------------- Page 4 -------------------------*/
section.about {
	background-image: url(../img/wood.jpg);
	min-height: 400px;
	height: auto;
}

section.about h1 {
  font-family: "Lato", sans-serif;
  font-size: 45px;
  line-height: 50px;
  font-weight: 400;
  color: white;
  text-align: left; }

section.about p {
  font-family: "Lato", sans-serif;
  font-size: 16px;
  line-height: 21px;
  font-weight: 300;
  color: white;
  text-align: left; }

section.about h1, section.about p {
  margin-bottom: 20px; }

section.about {
  padding: 75px 0; }

/*------------------------- Page 5 -------------------------*/
section.testimonials {
	background-image: none;
	background-color: #fff;
	min-height: 400px;
	height: auto;
}

section.testimonials h1 {
  font-family: "Lato", sans-serif;
  font-size: 24px;
  line-height: 29px;
  font-weight: 400;
  color: black;
  text-align: left; }

section.testimonials p {
  font-family: "Lato", sans-serif;
  font-size: 14px;
  line-height: 19px;
  font-weight: 300;
  color: black;
  text-align: left; }

section.testimonials {
  background-color: white; }

section.testimonials img {
  display: block;
  margin: 0 auto 25px auto; }

section.testimonials {
  padding: 100px 0; 
}

/*------------------------- Page 6 -------------------------*/
section.page-6{
	background-color: #24cddc;
	min-height: 400px;
	height: auto;
	color: #fff;
	text-align: center;
}

section.page-6 {
  background-color: #24cddc; 

}

section.page-6 .container {
  padding: 100px 0; 
}

section.page-6 .container h1 {
  font-family: "Lato", sans-serif;
  font-size: 45px;
  line-height: 50px;
  font-weight: 400;
  color: white;
  text-align: center;
  margin-bottom: 70px; 
}

/*------------------------- Footer -------------------------*/
footer {
	background-color: #222222;
	min-height: 60px;
	height: auto;
	color: #B0B0B0;
}

footer p {
	font-size: 16px;
	line-height: 20px;
	padding-top: 25px;
}

footer i{
	padding-top: 30px;
	margin-right: 15px;
	&:hover{
		color:#fff;
		cursor: pointer;
	}
}

footer div.right {
  text-align: right; 
}

@media (max-width: 768px) {

	.divider {
		background-size: auto auto;
		background-attachment: scroll;
	}

	section.process p {
	  margin: 10px 10% 0 10%; 
	} 

	footer div.right {
		text-align: left;
		line-height: 20px;
		margin-top: -25px;
		margin-bottom: 15px;
	}

	footer i{
		margin-top: 0;
	}

	section#fader ul#slides li span.spacer{
		margin-bottom: 10px;
	}

	section#fader ul#slides li h3{
		font-size: 16px;
		margin: 0;
		margin-bottom:5px;
		display: none;
	}

	section#fader ul#slides li h1{
		font-size: 44px;
		margin:0;
		margin-bottom:3px;
		display: none;
	}

	section#fader ul#slides li {
		padding-top: 18px;
		height: 200px;
	}

	section#fader ul#slides li p {
		font-size: 12px;
		margin: 0 5px;
	}


	section.testimonials h1, section.testimonials p {
		text-align: center; 
	}

	section.testimonials p {
		margin: 10px 5% 0 5%; 
	} 
}

@media (min-width: 768px ) and (max-width: 992px) {

	section#fader ul#slides li p {
		margin: 0 50px 0 50px;
		padding: 0;
	}
}

